workday4/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "8080"
    port: 3306
    targetPort: 3306
  type: ClusterIP
  selector:
    io.kompose.service: db
