workday4/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  ports:
  - name: "8080"
    port: 80
    targetPort: 80 #container port
  type: LoadBalancer
  selector:
    io.kompose.service: wordpress
